<resources>
    <string name="app_name">My Application</string>

    <string name="welcome">WELCOME TO HOTEL</string>
    <string name="slogan">A place where you can do anything!</string>
    <string name="qrcode">QR CODE</string>
    <string name="mystay">Welcome!</string>
    <string name="name">NAME:</string>
    <string name="email">EMAIL:</string>
    <string name="nophone">NUMBER PHONE:</string>
    <string name="password">PASSWORD:</string>
    <string name="login">Hello There!</string>
    <string name="login1">LOGIN</string>
    <string name="request">Hey there! Do you need anything else?</string>
    <string name="submit">SUBMIT</string>
    <string name="food">FOOD</string>
    <string name="necess">NECESSITIES</string>
    <string name="enterun">Enter Email</string>
    <string name="enterpass">Enter Password</string>
    <string name="contact">Contact</string>
    <string name="text1">If what you need is not there, do contact us.</string>
    <string name="signup">Sign Up!</string>
    <string name="food1">Food Menu</string>
    <string name="signup1">SIGN UP</string>
    <string name="warning_login">Not signed yet? Do Signup</string>
    <string name="date">DATE:</string>
    <string name="date2">Date</string>
    <string name="date3">To</string>
    <string name="register">Register!</string>
    <string name="register1">BOOK!</string>
    <string name="username">Username</string>

</resources>