<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/tiles_background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="55dp"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textColor="#48453c"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_edittext">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_email"
                android:hint="Enter email"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white"
                android:background="@android:color/transparent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edittext">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content" />

            <EditText
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_password1"
                android:hint="@string/enterpass"
                android:textColor="@android:color/white"
                android:inputType="textPassword"
                android:textColorHint="@android:color/white"
                android:background="@android:color/transparent"/>

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bt_login"
            android:text="@string/login1"
            android:textColor="#48453c"
            android:layout_marginTop="30dp"
            android:background="@drawable/round_button"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:id="@+id/tv_callSignup"
            android:textColor="#48453c"
            android:text="@string/warning_login"/>

</LinearLayout></LinearLayout>