<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/tiles_background"
    tools:context=".Signup">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tv_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/signup"
            android:textColor="#48453c"
            android:textSize="50sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/tv_name"
            android:text="@string/name"
            android:textColor="#48453c"

            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edittext">

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_name"
                android:hint="Enter Name"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:background="@android:color/transparent" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/tv_email"
            android:text="@string/email"
            android:textColor="#48453c"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edittext">

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_email"
                android:hint="Enter E-mail"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textEmailAddress"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/tv_phone"
            android:text="@string/nophone"
            android:textColor="#48453c"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edittext">

            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_phone"
                android:hint="Enter Phone Number"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:background="@android:color/transparent" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/tv_username"
            android:text="@string/username"
            android:textColor="#48453c"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edittext">


            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_username"
                android:hint="Enter Username"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:background="@android:color/transparent"
                android:ems="10"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:id="@+id/tv_password"
            android:text="@string/password"
            android:textColor="#48453c"
            android:background="@android:color/transparent" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/round_edittext">


            <EditText
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:id="@+id/et_password1"
                android:hint="Enter Password"
                android:textColor="@android:color/black"
                android:textColorHint="@android:color/darker_gray"
                android:background="@android:color/transparent"
                android:ems="10"
                android:inputType="textPassword"/>

        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bt_signup"
        android:text="@string/signup1"
        android:textColor="#48453c"
        android:layout_marginLeft="150dp"
        android:gravity="center"
        android:background="@drawable/round_button"/>



</LinearLayout>